--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
 
     <title>kretschmann.io</title>
 
@@ -13,45 +14,46 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/kretschmannio.min.css">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-      <section role="document">
-          <header>
-              <h1>kretschmann.io</h1>
-          </header>
+    <section role="document">
+        <header>
+            <h1>Beep Boop.</h1>
+        </header>
 
-          <footer>
-              <p>
-                  <a href="http://matthiaskretschmann.com" class="btn">portfolio</a>
-                  <a href="http://kremalicious.com" class="btn">blog</a>
-                  <a href="https://twitter.com/kremalicious" class="btn">twitter</a>
-                  <a href="https://plus.google.com/+MatthiasKretschmann?rel=author" class="btn">google+</a>
-              </p>
-          </footer>
-      </section>
+        <footer>
+            <p>
+                <a href="https://matthiaskretschmann.com" class="btn">portfolio</a>
+                <a href="https://kremalicious.com" class="btn">blog</a>
+                <a href="https://twitter.com/kremalicious" class="btn">twitter</a>
+                <a href="https://github.com/kremalicious" class="btn">github</a>
+                <a href="https://facebook.com/matthiaskretschmann" class="btn">facebook</a>
+            </p>
+        </footer>
+    </section>
 
-  </body>
+</body>
 
-    <!-- Piwik -->
-    <script type="text/javascript">
-        var _paq = _paq || [];
-        _paq.push(["setDomains", ["*.kretschmann.io"]]);
-        _paq.push(['trackPageView']);
-        _paq.push(['enableLinkTracking']);
-        
-        (function() {
-        var u="//analytics.kremalicious.com/";
-            _paq.push(['setTrackerUrl', u+'piwik.php']);
-            _paq.push(['setSiteId', 6]);
-            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-            g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-        })();
-    </script>
-    <noscript><p><img src="//analytics.kremalicious.com/piwik.php?idsite=6" style="border:0;" alt="" /></p></noscript>
-    <!-- End Piwik Code -->
+<!-- Piwik -->
+<script type="text/javascript">
+    var _paq = _paq || [];
+    _paq.push(["setDomains", ["*.kretschmann.io"]]);
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
 
-
+    (function () {
+        var u = "//analytics.kremalicious.com/";
+        _paq.push(['setTrackerUrl', u + 'piwik.php']);
+        _paq.push(['setSiteId', 6]);
+        var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+        g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'piwik.js'; s.parentNode.insertBefore(g, s);
+    })();
+</script>
+<noscript>
+    <p><img src="//analytics.kremalicious.com/piwik.php?idsite=6" style="border:0;" alt="" /></p>
+</noscript>
+<!-- End Piwik Code -->
 
 </html>
